feat: 使用 Knife4j 作为 api 文档UI

--- a/xx-manage/src/main/resources/application-dev.yml.example
+++ b/xx-manage/src/main/resources/application-dev.yml.example
@@ -15,8 +15,14 @@ spring:
 springdoc:
   swagger-ui:
     enabled: true
+    tags-sorter: alpha
+    operations-sorter: alpha
   api-docs:
     enabled: true
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
 logging:
   level:
     com.github.w4o.xx: debug
