--- a/xx-core/pom.xml
+++ b/xx-core/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>aliyun-oss-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
