--- a/api/xx-parent/pom.xml
+++ b/api/xx-parent/pom.xml
@@ -27,8 +27,9 @@
         <poi-ooxml.version>5.2.2</poi-ooxml.version>
         <flowable.version>6.7.2</flowable.version>
         <aliyun-spring-boot-dependencies.version>1.0.0</aliyun-spring-boot-dependencies.version>
-        <springdoc.version>1.6.9</springdoc.version>
+        <springdoc.version>1.6.15</springdoc.version>
         <weixin-java-miniapp.version>4.4.0</weixin-java-miniapp.version>
+        <knife4j.version>4.1.0</knife4j.version>
     </properties>
 
     <dependencyManagement>
@@ -66,12 +67,11 @@
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
-                <version>4.0.0</version>
+                <version>${knife4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-ui</artifactId>
-                <!--保持版本与Knife4j v4.0的版本一致，避免jar包冲突，因为Knife4j-v4.0.0版本依赖的springdoc版本是1.6.9 -->
                 <version>${springdoc.version}</version>
             </dependency>
             <dependency>
