--- a/api/xx-manage/src/main/resources/application-dev.yml.example
+++ b/api/xx-manage/src/main/resources/application-dev.yml.example
@@ -2,16 +2,15 @@ server:
   port: 9001
 spring:
   datasource:
-    druid:
-      url: jdbc:mysql://127.0.0.1:3306/xxx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&tinyInt1isBit=false
-      username: root
-      password: 123456
-      validation-query: SELECT 1
-  redis:
-    database: 0
-    host: 127.0.0.1
-    port: 6379
+    url: jdbc:mysql://127.0.0.1:3306/xxx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&tinyInt1isBit=false
+    username: root
     password: 123456
+  data:
+    redis:
+      database: 0
+      host: 127.0.0.1
+      port: 6379
+      password: 123456
 springdoc:
   swagger-ui:
     enabled: true
