--- a/api/xx-parent/pom.xml
+++ b/api/xx-parent/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.13</version>
+        <version>3.1.2</version>
         <relativePath/>
     </parent>
 
@@ -21,7 +21,7 @@
         <java.version>17</java.version>
         <druid.version>1.2.12</druid.version>
         <hutool.version>5.8.11</hutool.version>
-        <mybatis-plus.version>3.5.2</mybatis-plus.version>
+        <mybatis-plus.version>3.5.3</mybatis-plus.version>
         <java-jwt.version>4.2.1</java-jwt.version>
         <log4j2.version>2.17.0</log4j2.version>
         <poi-ooxml.version>5.2.2</poi-ooxml.version>
@@ -29,7 +29,8 @@
         <aliyun-spring-boot-dependencies.version>1.0.0</aliyun-spring-boot-dependencies.version>
         <springdoc.version>1.6.15</springdoc.version>
         <weixin-java-miniapp.version>4.4.0</weixin-java-miniapp.version>
-        <knife4j.version>4.1.0</knife4j.version>
+        <knife4j.version>4.2.0</knife4j.version>
+        <aliyun-sdk-oss.version>3.17.1</aliyun-sdk-oss.version>
     </properties>
 
     <dependencyManagement>
@@ -66,7 +67,7 @@
             </dependency>
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
+                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
             </dependency>
             <dependency>
@@ -87,6 +88,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun-sdk-oss.version}</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
