--- a/api/xx-parent/pom.xml
+++ b/api/xx-parent/pom.xml
@@ -31,6 +31,7 @@
         <weixin-java-miniapp.version>4.4.0</weixin-java-miniapp.version>
         <knife4j.version>4.2.0</knife4j.version>
         <aliyun-sdk-oss.version>3.17.1</aliyun-sdk-oss.version>
+        <cos_api.version>5.6.75</cos_api.version>
     </properties>
 
     <dependencyManagement>
@@ -47,7 +48,17 @@
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
-                <artifactId>hutool-all</artifactId>
+                <artifactId>hutool-core</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-crypto</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-captcha</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
             <dependency>
@@ -94,8 +105,11 @@
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>${aliyun-sdk-oss.version}</version>
             </dependency>
-
-
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>${cos_api.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
