fix: 阿里云短信发送依赖修改

--- a/api/xx-core/pom.xml
+++ b/api/xx-core/pom.xml
@@ -108,7 +108,7 @@
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
-            <artifactId>dysmsapi20170525</artifactId>
+            <artifactId>alibabacloud-dysmsapi20170525</artifactId>
         </dependency>
         <!-- test -->
         <dependency>
